[package]
name = "tokio-minhttp"
version = "0.1.0"
authors = ["Sparkenstein <zetabytes.pp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.11"
tokio-core = "0.1.0"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }
env_logger = "0.7.0"
